--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>D'H7</title>
+      <link rel="icon" href="https://www.adamdh7.org/asset/IMG_7023.png">
+  <meta property="og:image" content="https://www.adamdh7.org/asset/IMG_7023.png">
+  <meta property="og:image:width" content="512">
+  <meta property="og:image:height" content="512">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image" content="https://adamdh7.org/asset/IMG_7023.png">
+
+  <script type="application/ld+json">
+  {"@context":"https://schema.org","@type":"Organization","name":"D'H7","url":"https://www.adamdh7.org","logo":"https://adamdh7.org/asset/IMG_7023.png"}
+  </script>
+
+  <link rel="manifest" href="manifest.json" />
+
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-mobile-web-app-title" content="D'H7" />
+  <link rel="apple-touch-icon" href="asset/IMG_7023.png" />
+
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
-    <link rel="manifest" href="/manifest.json">
     <style>
         :root {
             --bg-pure: #000000;
