--- a/index.html
+++ b/index.html
@@ -4,19 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>D'H7</title>
-      <link rel="icon" href="https://www.adamdh7.org/asset/IMG_7023.png">
+  <link rel="icon" href="https://www.adamdh7.org/asset/IMG_7023.png">
   <meta property="og:image" content="https://www.adamdh7.org/asset/IMG_7023.png">
   <meta property="og:image:width" content="512">
   <meta property="og:image:height" content="512">
 
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:image" content="https://adamdh7.org/asset/IMG_7023.png">
+  <meta name="twitter:image" content="https://www.adamdh7.org/asset/IMG_7023.png">
 
   <script type="application/ld+json">
-  {"@context":"https://schema.org","@type":"Organization","name":"D'H7","url":"https://www.adamdh7.org","logo":"https://adamdh7.org/asset/IMG_7023.png"}
+  {"@context":"https://schema.org","@type":"Organization","name":"D'H7","url":"https://www.adamdh7.org","logo":"https://www.adamdh7.org/asset/IMG_7023.png"}
   </script>
-
-  <link rel="manifest" href="manifest.json" />
+<link rel="manifest" href="manifest.json" />
 
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
