--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="apple-mobile-web-app-title" content="D'H7" />
-  <link rel="apple-touch-icon" href="asset/IMG_7023.png" />
+  <link rel="apple-touch-icon" href="ttps://www.adamdh7.org/asset/IMG_7023.png" />
 
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
