--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link rel="icon" type="image/png" href="https://www.adamdh7.org/asset/IMG_7023.png">
     <link rel="shortcut icon" href="https://www.adamdh7.org/asset/IMG_7023.png">
-    
+    <link rel="canonical" href="https://www.adamdh7.org/" />
     <link rel="apple-touch-icon" href="https://www.adamdh7.org/asset/IMG_7023.png" />
 
     <meta property="og:title" content="D'H7 - Digital Hub 7">
