--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     
-    <title>D'H7 | Digital Hub 7 - Platfòm Kominikasyon Sekirize</title>
-    <meta name="description" content="D'H7 (Digital Hub 7) se yon rezo sekirize pou kominike ak jere idantite dijital ou.">
+    <title>D'H7 | Digital Hub 7</title>
+    <meta name="description" content="D'H7 (Digital Hub 7) se yon platfòm kominikasyon sekirize ki pèmèt ou jere idantite dijital ou ak yon TFID/D'H7 inik. Konekte kounye a pou w jwenn aksè nan yon rezo pwoteje, miltiling (Kreyòl, Fransè, Angle, Espanyòl), epi fasil pou itilize.">
 
     <link rel="icon" type="image/png" href="https://www.adamdh7.org/asset/IMG_7023.png">
     <link rel="shortcut icon" href="https://www.adamdh7.org/asset/IMG_7023.png">
