--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
 
     <script>
         const API = "https://dh7.adamdh7.org";
-        const UPLOAD_URL = "https://tfupload.tergenefocus.worker.dev/";
+        const UPLOAD_URL = "https://url.tergenedhaiti.workers.dev/";
         const FILE_START = '\u2061';
         const FILE_END = '\u2062';
         const REPLY_START = '\u2063';
